Add language swap script

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/messages.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/messages.properties
@@ -1,4 +1,10 @@
-greeting=Hello! Welcome to our website!
-lang.change=Change the language
-lang.eng=English
+lang.en=English
 lang.fr=French
+
+Features=Features
+Pricing=Pricing
+FAQs=FAQs
+About=About
+Login=Login
+Signup=Signup
+Filter=Filter
