--- a/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
@@ -1,4 +1,10 @@
-greeting=Bonjour! Bienvenue sur notre site!
-lang.change=Changez la langue
-lang.eng=Anglais
+lang.en=Anglais
 lang.fr=Francais
+
+Features=Caractéristiques
+Pricing=Tarifs
+FAQs=FAQs
+About=À propos
+Login=Se connecter
+Signup=S'inscrire
+Filter=Filtre
