Make topics page paginated

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/messages.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 lang.en=English
 lang.fr=French
 
+View=View
 Features=Features
 Pricing=Pricing
 FAQs=FAQs
@@ -8,3 +9,6 @@ About=About
 Login=Login
 Signup=Signup
 Filter=Filter
+Title=Title
+Header=Header
+Action=Action
