--- a/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
@@ -1,6 +1,7 @@
 lang.en=Anglais
 lang.fr=Francais
 
+View=Voir
 Features=Caractéristiques
 Pricing=Tarifs
 FAQs=FAQs
@@ -8,3 +9,6 @@ About=À propos
 Login=Se connecter
 Signup=S'inscrire
 Filter=Filtre
+Title=Titre
+Header=Entête
+Action=Action
