Style search form, add fontawesome cdn

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
@@ -9,7 +9,7 @@ FAQs=FAQs
 About=À propos
 Login=Se connecter
 Signup=S'inscrire
-Filter=Filtre
 Title=Titre
 Header=Entête
 Action=Action
+Search=Recherche
