Style add topic form (add translated error message)

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/messages.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/messages.properties
@@ -15,3 +15,8 @@ Header=Header
 Action=Action
 Search=Search
 Create=Create
+
+enter.title=Enter title
+enter.header=Entrez header
+create.new.topic=Create new topic
+title.missing=Title missing
