--- a/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
@@ -13,4 +13,9 @@ Title=Titre
 Header=Entête
 Action=Action
 Search=Recherche
-Create=Créer
+Create=Crée
+
+enter.title=Entrez le titre
+enter.header=Entrez l'en-tête
+create.new.topic=Créer un nouveau sujet
+title.missing=Titre manquant
