Show sign-out when user logged-in

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
@@ -14,6 +14,7 @@ Header=Entête
 Action=Action
 Search=Recherche
 Create=Crée
+Logout=Se déconnecter
 
 enter.title=Entrez le titre
 enter.header=Entrez l'en-tête
