Show comment edit button to comment owner only

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/messages_fr.properties
@@ -15,6 +15,7 @@ Action=Action
 Search=Recherche
 Create=Crée
 Logout=Se déconnecter
+Edit=Modifier
 
 enter.title=Entrez le titre
 enter.header=Entrez l'en-tête
